--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>explore third github</title>
 </head>
 <body>
-    <h1>explore third github</h1>
+    <h1>explore third github rep</h1>
+    <h1>exploring github repo</h1>
+    <div>
+        <h3>for every other type</h3>
+        <p>git add .</p>
+        <p>git commit -m"your meaningfull commit message"</p>
+        <p>git push</p>
+    </div>
 </body>
 </html>
